@startuml

' --- PENGATURAN TAMPILAN ---
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50

' --- JUDUL ---
title Class Diagram - Bocchi Pet Game (Final Version)

' ==========================================
' 1. MODEL (DATA)
' ==========================================

class Player {
    - stats : PlayerStats
    - currentGuitarImage : StringProperty
    - name : String
    + Player()
    + getName() : String
    + setName(name: String) : void
    + addSanity(amount: int) : void
    + addFood(amount: int) : void
    + addMoney(amount: int) : void
    + getCurrentGuitarImage() : String
    + setCurrentGuitarImage(path: String) : void
    + sanityProperty() : IntegerProperty
    + foodProperty() : IntegerProperty
    + moneyProperty() : IntegerProperty
}

class PlayerStats {
    - sanity : IntegerProperty
    - food : IntegerProperty
    - money : IntegerProperty
    + PlayerStats(s: int, f: int, m: int)
    + getSanity() : int
    + setSanity(value: int) : void
    + getFood() : int
    + setFood(value: int) : void
    + getMoney() : int
    + setMoney(value: int) : void
}

class PlayerDataDTO {
    - sanity : int
    - food : int
    - money : int
    - currentGuitarImage : String
    - playerName : String
    + getSanity() : int
    + setSanity(s: int) : void
    + getPlayerName() : String
    + setPlayerName(n: String) : void
    ' (getter/setter lainnya disingkat utk kejelasan)
}

' ==========================================
' 2. AKTIVITAS (INTERFACE & POLYMORPHISM)
' ==========================================

interface IActivity <<Interface>> {
    + perform(player: Player) : void
    + getAnimationImageKey() : String
    + getSoundEffectKey() : String
}

class PartTimeJob {
    + perform(player: Player) : void
    + getAnimationImageKey() : String
    + getSoundEffectKey() : String
}

class BandPractice {
    - variant : int
    + BandPractice(variant: int)
    + perform(player: Player) : void
    + getAnimationImageKey() : String
    + getSoundEffectKey() : String
}

' ==========================================
' 3. SHOP (AGREGASI)
' ==========================================

class Shop {
    - availableItems : List<ShopItem>
    + Shop()
    - initializeStock() : void
    + purchaseItem(player: Player, item: ShopItem) : boolean
    + getAvailableItems() : List<ShopItem>
}

class ShopItem {
    - name : String
    - price : int
    - foodBonus : int
    - guitarImageId : String
    + ShopItem(name: String, price: int, bonus: int, img: String)
    + getName() : String
    + isFood() : boolean
    + isGuitar() : boolean
}

' ==========================================
' 4. CONTROLLER & SERVICES
' ==========================================

class MainApp {
    + start(primaryStage: Stage) : void
    + stop() : void
    + main(args: String[]) : void
}

class MainGameController {
    ' UI Elements (FXML)
    - rootPane : StackPane
    - sanityBar : ProgressBar
    - foodBar : ProgressBar
    - moneyLabel : Label
    - bocchiCharacter : ImageView
    - animationOverlay : ImageView
    - discoOverlay : AnchorPane
    - settingsMenu : VBox
    - slotMenu : VBox
    - inputNameMenu : VBox
    - confirmationMenu : VBox
    - shopMenu : AnchorPane
    - gameOverMenu : VBox
    
    ' Logic Objects
    - shop : Shop
    - player : Player
    - assetManager : AssetManager
    - saveLoadService : SaveLoadService
    - uiManager : InternalUIManager
    
    ' Media & Animation
    - sfxPlayer : MediaPlayer
    - musicPlayer : MediaPlayer
    - characterAnimation : Timeline
    - discoLightTimeline : Timeline
    
    ' State
    - isGameOver : boolean
    - isSavingMode : boolean
    - selectedSlot : int
    
    + initialize(location: URL, resources: ResourceBundle) : void
    - resetUIState() : void
    - executeActivity(activity: IActivity) : void
    - playDynamicBandAnimation(img: Image, sound: Media) : void
    - startDiscoLights(outline: DropShadow, themeColor: Color) : void
    - startNoteAnimations(themeColor: Color) : void
    - showFloatingText(container: StackPane, value: int) : void
    - triggerSanityZero() : void
    - triggerFoodZero() : void
    - onRestartClick() : void
    - onSaveMenuClick() : void
    - onLoadMenuClick() : void
    - onBuyEnergyDrink() : void
    - onBuyPill() : void
}

class InternalUIManager <<Nested Class>> {
    - moneyRollAnimation : Timeline
    - sanityBlink : Timeline
    + InternalUIManager(...)
    + bindToPlayer(player: Player) : void
    - updateBarStyle(...) : void
    - playMoneyRollingAnimation(...) : void
}

class SaveLoadService {
    - gson : Gson
    - SAVE_PATH : Path
    + SaveLoadService()
    + saveGame(player: Player, slotName: String, playerName: String) : void
    + loadGame(slotName: String) : Player
    + getSlotPreview(slotName: String) : PlayerDataDTO
}

class AssetManager {
    - images : Map<String, Image>
    - sounds : Map<String, Media>
    + loadAssets() : void
    + getImage(key: String) : Image
    + getSound(key: String) : Media
}

' ==========================================
' 5. HUBUNGAN (ASOSIASI ANTAR CLASS)
' ==========================================

' MainApp menjalankan Controller
MainApp ..> MainGameController : <<Creates>>

' Komposisi (Player MEMILIKI PlayerStats secara penuh)
Player *-- PlayerStats : <<Composes>>

' Realisasi/Implementasi (Polymorphism)
IActivity <|.. PartTimeJob : <<Implements>>
IActivity <|.. BandPractice : <<Implements>>

' Agregasi (Shop MEMILIKI DAFTAR ShopItem)
Shop o-- "0..*" ShopItem : <<Has>>

' Asosiasi (Controller MENGGUNAKAN Service & Player)
MainGameController --> SaveLoadService : <<Uses>>
MainGameController --> AssetManager : <<Uses>>
MainGameController --> Player : <<Manages>>
MainGameController --> Shop : <<Manages>>

' Nested Class
MainGameController +-- InternalUIManager : <<Contains>>

' Dependency (Service menggunakan DTO untuk transfer data)
SaveLoadService ..> PlayerDataDTO : <<Creates/Reads>>

@enduml